--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "com.example.snapchat_test"
+        applicationId "com.example.snapchat_lens_demo"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
